fixed another stupid css thingy, now sketch button images align with background color of button

--- a/public/sketch.css
+++ b/public/sketch.css
@@ -55,7 +55,7 @@
 }
 
 #tools * img {
-    background-color:lightgrey;
+    background-color: inherit;
     height: 48px;
     width: 48px;
     border: none;
